--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a href="#">My logo</a>
+            <a href="#">Innocent259</a>
             <ul class="navbar-nav lg-auto">
                 <li class="nav-item active"><a class="nav-link" href="#">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
