--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
             </div>
         </div>
     </div>
+    <div class="container-md my-5">
+        <h1 class="display-1 text-center text-primary">Column widths</h1>
+        <div class="row my-5">
+            <div class="col-6">
+                <div class="bg-primary p-3 text-white text-center">column 1</div>
+            </div>
+            <div class="col-3">
+                <div class="bg-primary p-3 text-white text-center">column 2</div>
+            </div>
+            <div class="col-3">
+                <div class="bg-primary p-3 text-white text-center">column 3</div>
+            </div>
+        </div>
+    </div>
+    <div class="container-md my-5">
+        <h1 class="display-1 text-center text-primary">Responsive column widths</h1>
+        <div class="row my-5">
+            <div class="col-sm-4 col-md-6">
+                <div class="bg-primary p-3 text-white text-center">column 1</div>
+            </div>
+            <div class="col-sm-4 col-md-3">
+                <div class="bg-primary p-3 text-white text-center">column 2</div>
+            </div>
+            <div class="col-sm-4 col-md-3">
+                <div class="bg-primary p-3 text-white text-center">column 3</div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
