--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
             </div>
         </div>
     </div>
+    <div class="container-md justify-content-center ">
+        <h1 class="text-primary text-center">Justify columns</h1>
+        <div class="row my-5">
+            <div class="col-md-3">
+                <div class="bg-primary text-white text-center p-3">column 1</div>
+            </div>
+            <div class="col-md-3">
+                <div class="bg-primary text-white text-center p-3">column 2</div>
+            </div>
+            <div class="col-md-3">
+                <div class="bg-primary text-white text-center p-3">column 3</div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
