--- a/index.html
+++ b/index.html
@@ -4,65 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="index.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <div class="container-md my-5">
-        <h1 class="display-1 text-center text-primary">Basic grid</h1>
-        <div class="row my-5">
-            <div class="col">
-                <div class="bg-primary p-3 text-white text-center">column 1</div>
-            </div>
-            <div class="col">
-                <div class="bg-primary p-3 text-white text-center">column 2</div>
-            </div>
-            <div class="col">
-                <div class="bg-primary p-3 text-white text-center">column 3</div>
-            </div>
-        </div>
-    </div>
-    <div class="container-md my-5">
-        <h1 class="display-1 text-center text-primary">Column widths</h1>
-        <div class="row my-5">
-            <div class="col-6">
-                <div class="bg-primary p-3 text-white text-center">column 1</div>
-            </div>
-            <div class="col-3">
-                <div class="bg-primary p-3 text-white text-center">column 2</div>
-            </div>
-            <div class="col-3">
-                <div class="bg-primary p-3 text-white text-center">column 3</div>
+    <section id="intro">
+        <div class="container-lg my-3">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-5 text-center text-md-left">
+                    <h1>
+                        <div class="display-2">Black-Belt</div>
+                        <div class="display-5 text-muted">Your coding skills</div>
+                    </h1>
+                    <p class="lead">Lorem ipsum lorem ipsum lorem ipsum</p>
+                    <a href="#" class="btn btn-secondary btn-lg">Buy Now</a>
+                </div>
+                <div class="col-md-5 d-none d-md-block">
+                    <img class="img-fluid" src="./assets/ebook-cover.png" alt="book cover">
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container-md my-5">
-        <h1 class="display-1 text-center text-primary">Responsive column widths</h1>
-        <div class="row my-5">
-            <div class="col-sm-4 col-md-6">
-                <div class="bg-primary p-3 text-white text-center">column 1</div>
-            </div>
-            <div class="col-sm-4 col-md-3">
-                <div class="bg-primary p-3 text-white text-center">column 2</div>
-            </div>
-            <div class="col-sm-4 col-md-3">
-                <div class="bg-primary p-3 text-white text-center">column 3</div>
-            </div>
-        </div>
-    </div>
-    <div class="container-md justify-content-center ">
-        <h1 class="text-primary text-center">Justify columns</h1>
-        <div class="row my-5">
-            <div class="col-md-3">
-                <div class="bg-primary text-white text-center p-3">column 1</div>
-            </div>
-            <div class="col-md-3">
-                <div class="bg-primary text-white text-center p-3">column 2</div>
-            </div>
-            <div class="col-md-3">
-                <div class="bg-primary text-white text-center p-3">column 3</div>
-            </div>
-        </div>
-    </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
